--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -10,6 +10,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Configure Git
+        run: |
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "GitHub Actions [Bot]"
+
       - name: Checkout fork
         uses: actions/checkout@v4
         with:
