--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Push changes
         run: |
-          if [ -n "$(git status --porcelain)" ]; then
+          if [ "$(git rev-list --count origin/master..master)" -gt 0 ]; then
             git push origin master
           else
             echo "No changes to push"
